--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+.App{
+  text-align:center;
+  margin: auto;
+  margin-top:50px;
+  width:500px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+form{
+  width:100%;
 }
+form input{
+  width:80%;
+  line-height:40px;
+  border:2px solid red;
+  border-radius:20px;
+  outline-style:none;
+  font-size:20px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+}
+button{
+  background-color:red;
+  color:white;
+  outline:none;
+  border-radius:5px;
+
+}
+form-button{
+  height:40px;
+  font-size:20px;
+}
+ul{
+  margin:auto;
+  margin-top:20px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  ul li{
+    display:inline-block;
+    width:80%;
+    font-size:20px;
+    color:white;
+    border-bottom:2px solid lime;
+    text-align:left;
   }
-  to {
-    transform: rotate(360deg);
-  }
+.done{
+  text-decoration-line:line-through;
+  text-decoration-color:red
 }
